--- a/react-ts/ProjectName.csproj
+++ b/react-ts/ProjectName.csproj
@@ -15,8 +15,7 @@
 
   <ItemGroup>
     <!-- <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.20" /> -->
-    <!-- <PackageReference Include="AspNetCore.InertiaCore" Version="0.0.9" /> -->
-    <ProjectReference Include="..\..\InertiaCore\InertiaCore\InertiaCore.csproj" />
+    <PackageReference Include="AspNetCore.InertiaCore" Version="0.0.9" />
   </ItemGroup>
 
   <ItemGroup>
