--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "InertiaCore Create",
     "type": "module",
     "scripts": {
-        "publish": "npm publish"
+        "publish": "npm publish --access public"
     },
     "bin": {
         "inertiacore-kit": "bin/create.js"
