--- a/react-ts/ClientApp/package.json
+++ b/react-ts/ClientApp/package.json
@@ -8,17 +8,16 @@
     },
     "dependencies": {
         "@inertiajs/react": "^2.0.3",
-        "@tailwindcss/vite": "^4.0.6",
-        "@vitejs/plugin-react": "^4.0.0",
         "axios": "^1.4.0",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "tailwindcss": "^4.0.6"
     },
-    "@inertiajs/react": "^2.0.0",
     "devDependencies": {
+        "@vitejs/plugin-react": "^4.0.0",
+        "@tailwindcss/vite": "^4.0.6",
         "@types/react-dom": "^19.0.3",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.6",
         "vite": "^6.0.0"
     }
 }
