--- a/vue-ts/ClientApp/package.json
+++ b/vue-ts/ClientApp/package.json
@@ -8,14 +8,15 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.3",
-        "@tailwindcss/vite": "^4.0.6",
-        "@vitejs/plugin-vue": "^5.2.1",
-        "axios": "^1.4.0"
+        "@vue/server-renderer": "^3.5.13",
+        "axios": "^1.4.0",
+        "tailwindcss": "^4.0.6"
     },
     "@inertiajs/react": "^2.0.0",
     "devDependencies": {
+        "@tailwindcss/vite": "^4.0.6",
+        "@vitejs/plugin-vue": "^5.2.1",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.6",
         "vite": "^6.0.0"
     }
 }
